--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "identity-obj-proxy": "^3.0.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
